Enable local publishing